# direnv-instant

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  default.nix  demo.nix  demo.tape  flake.nix  home.nix  pyproject.toml  tests.nix  treefmt.nix
.github/workflows/: update-flake-inputs.yml
hooks/: bash.sh  zsh.sh
src/: daemon.rs  main.rs  mux.rs
src/commands/: start.rs  watch.rs
tests/: conftest.py  helpers.py  test_blocking_envrc_calls_tmux.py  test_ctrl_c_cancels_in_non_mux_mode.py  test_forward_input_in_async_mode.py  test_integration.py  test_no_tmux_runs_direnv_synchronously.py  test_slow_direnv_exports_via_tmux.py  test_stop_command_stops_daemon.py
